fixed padding, alignment; modified iframe media queries

--- a/css/style.css
+++ b/css/style.css
@@ -35,10 +35,10 @@ p {
     font-size: 1.3em;
 }
 
-.vid {
+p.vid {
     padding: 15px;
-    font-size: 10em;
-    margin: 5px;
+    align-content: center;
+    text-align: center;
 }
 
 /* styling the input area from here to all the way till password input */
@@ -229,6 +229,7 @@ nav a {
 nav a:hover{
     color: #000;
 }
+
 nav a:before{
     content:'';
     display:block;
@@ -262,13 +263,13 @@ input[type=submit]:hover {
 
 iframe {
     float: left;
-    padding: 0;
+    padding: 5px;
     border: solid 5px #474d54;
 }
 
 
 .img {
-    padding: 0;
+    padding: 5px;
     height: 307px;
     width: 480px;
     float: right;
@@ -311,6 +312,11 @@ width: 100%;
     width: 100%;
     margin-top: 0;
     
+  }
+  
+  iframe {
+    width: 450px;
+    height: 253px;
   }
 }
 
